tests/Rules/Structure/Fixtures/invalid/table_missing_th_scope.html.twig
{# 2 errors #}
<table>
  <thead>
    <tr>
      <th>Name</th>
      <th>Age</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Alice</td>
      <td>30</td>
    </tr>
  </tbody>
</table>
